--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Axit</title>
 	<link rel="stylesheet" href="Style/main.css">
 </head>
 <body>
@@ -15,13 +15,28 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Features</a></li>
 			</ul>
+			
 			<div class="main_header__top_form">
 				<div class="wraper">
 					<div class="main_header__top_form-left_column">	
-					
+						<img src="img/max-logo.png" widht="175px" height="60px">
+						<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+							euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+							accumsan et viverra justo commodo.</p>
+							<button class="header_button">Download</button>
 					</div>
+
 					<div class="main_header__top_form-right_column">
-						
+						<form class="main_header_form">
+							<h2>Try Your <span style="color: #ff9b51">FREE</span> Trial Today</h2>
+							<div class="main_header_form-input_wraper">
+								<input type="text" placeholder="Name">
+								<input type="text" placeholder="E-mail">
+								<input type="text" placeholder="Password">
+							</div>
+							<button class="main_header_form-button">Get Started</button>
+						</form>
 					</div>
 				</div>
 			</div>
