--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						<form class="main_header_form">
 							<h2>Try Your <span style="color: #ff9b51">FREE</span> Trial Today</h2>
 							<div class="main_header_form-input_wraper">
-								<input type="text" placeholder="Name">
-								<input type="text" placeholder="E-mail">
-								<input type="text" placeholder="Password">
+								<input type="text" placeholder="Name" required>
+								<input type="text" placeholder="E-mail" required>
+								<input type="text" placeholder="Password" required>
 							</div>
 							<button class="main_header_form-button">Get Started</button>
 						</form>
