adedd content block 1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</ul>
 			
 			<div class="main_header__top_form">
-				<div class="wraper">
+				<div class="wraper_top">
 					<div class="main_header__top_form-left_column">	
 						<img src="img/max-logo.png" widht="175px" height="60px">
 						<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
@@ -43,9 +43,52 @@
 		</div>
 	</header>
 
-
 	<main>
-		
+		<div class="main_body__top_social_line-bg">
+		<div class="main_body__top_social_line wraper">
+
+			<div class="main_body__top_social_line-text_block">
+				<h3>Social Media</h3>
+				<p>	Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+				Aenean euismod bibendum laoreet.</p>
+			</div>
+
+			<div class="main_body__top_social_line-icon_block">
+				<img src="img/social_buttons.png" alt="social">
+			</div>
+
+		</div>
+		</div>
+	
+		<div class="main_body__content_block_1-bg">
+		<div class="main_body__content_block_1 wraper">	
+
+			<div class="main_body__content_block_1-tabs">
+				<ul>
+					<li class="active_tab"><a href="#">TAB 1</a></li>
+					<li><a href="#">TAB 2</a></li>
+					<li><a href="#">TAB 3</a></li>
+				</ul>
+			</div>
+
+			<div class="main_body__content_block_1-text_block">
+				<h3>Tabs with soft transitioning effect.</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+					bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+					justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+					penatibus et magnis dis parturient montes.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+					bibendum laoreet.</p>
+				<button>Download</button>
+			</div>
+
+			<div class="main_body__content_block_1-img_block">
+				<img src="img/town_img.png" alt="city" width="320px" height="253px">
+			</div>
+
+		</div>
+		</div>
+
 	</main>
 
 
