--- a/index.html
+++ b/index.html
@@ -89,6 +89,130 @@
 		</div>
 		</div>
 
+
+
+		<div class="main_body__content_block_2-bg">
+		<div class="main_body__content_block_2 wraper">	
+
+			<div class="main_body__content_block_2-img_block">
+				<img src="img/town_img_2.png" alt="city" width="525px" height="375px">
+			</div>
+
+			<div class="main_body__content_block_2-text_block">
+
+				<div class="main_body__content_block_2-text_block__top">
+				<h3>Sub list section</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
+					euismod bibendum laoreet. Proin gravida dolor sit amet lacus 
+					accumsan et viverra justo commodo.</p>
+				</div>
+
+				<div class="main_body__content_block_2-text_block__bottom_main">
+					<div class="main_body__content_block_2-text_block__bottom">
+						<div class="main_body__content_block_2-text_block__bottom-img">
+							<div class="big_sprite big_sprite-cloud_up"></div>
+						</div>
+						<div class="main_body__content_block_2-text_block__bottom-articles">
+						<h4>Title</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+						Aenean euismod bibendum laoreet.</p>
+						</div>
+					</div>
+					<div class="main_body__content_block_2-text_block__bottom">
+						<div class="main_body__content_block_2-text_block__bottom-img">
+							<div class="big_sprite big_sprite-cloud_down"></div>
+						</div>
+						<div class="main_body__content_block_2-text_block__bottom-articles">
+						<h4>Title</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+						Aenean euismod bibendum laoreet. Proin gravida dolor 
+						sit amet lacus accumsan et viverra justo commodo.</p>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+		</div>
+
+
+		<div class="main_body__content_block_1-bg">
+		<div class="main_body__content_block_3 wraper">	
+
+		<div class="main_body__content_block_3-text_block">
+				<h3>Standard Picture Section</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+					bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+					justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+					penatibus et magnis dis parturient montes.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+					bibendum laoreet.</p>
+			</div>
+
+			<div class="main_body__content_block_3-img_block">
+				<img src="img/town_img_3.png" alt="city" width="525px" height="375px">
+			</div>
+		</div>
+		</div>
+
+		
+		<div class="main_body__content_block_4-bg">
+		<div class="main_body__content_block_4 wraper">
+			<div class="main_body__content_block_4-header">
+				<h2>WHY THIS IS AWESOME</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="main_body__content_block_4-elem-list">
+				<div class="main_body__content_block_4-elem-list-element">
+					<div class="img big_sprite big_sprite-lamp"></div>
+					<h3>Thoughtful Design</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit. Aenean euismod bibendum laoreet. Proin gravida 
+						dolor sit amet lacus accumsan et viverra.</p>
+				</div>
+				<div class="main_body__content_block_4-elem-list-element">
+					<div class="img big_sprite big_sprite-keyboard"></div>
+					<h3>Well Crafted</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit. Aenean euismod bibendum laoreet. Proin gravida 
+						dolor sit amet lacus accumsan et viverra.</p>
+				</div>
+				<div class="main_body__content_block_4-elem-list-element">
+					<div class="img big_sprite big_sprite-flash"></div>
+					<h3>Easy to Customize</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+						elit. Aenean euismod bibendum laoreet. Proin gravida 
+						dolor sit amet lacus accumsan et viverra.</p>
+				</div>
+			</div>
+
+		</div>
+		</div>
+
+		
+		<div class="main_body__content_block_5-bg">
+		<div class="main_body__content_block_5">
+			<div class="main_body__content_block_5-header">
+				<h2>PRICING OPTIONS</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			
+			<div class="main_body__content_block_5-elem-list">
+				<div class="main_body__content_block_5-elem-list-element">
+					f
+				</div>
+				<div class="main_body__content_block_5-elem-list-element">
+					f
+				</div>
+				<div class="main_body__content_block_5-elem-list-element">
+					f
+				</div>
+			</div>
+
+		</div>	
+		</div>
+
+
 	</main>
 
 
