added all, without form-block

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 		
 		<div class="main_body__content_block_5-bg">
-		<div class="main_body__content_block_5">
+		<div class="main_body__content_block_5 wraper">
 			<div class="main_body__content_block_5-header">
 				<h2>PRICING OPTIONS</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -199,25 +199,140 @@
 			
 			<div class="main_body__content_block_5-elem-list">
 				<div class="main_body__content_block_5-elem-list-element">
-					f
+					<h3>Basic</h3>
+					<p>$<span>0</span> <br>
+					<i>Free for Life</i></p>
+					<ul>
+						<li>1 gb of space</li>
+						<li>10 gb of bandwidth</li>
+						<li>3 websites</li>
+						<li>Basic Customization</li>
+						<li>wordpress integration</li>
+						<li>email support</li>
+					</ul>
+				</div>
+				<div class="main_body__content_block_5-elem-list-element-best">
+					<h3>Professional</h3>
+					<p>$<span>19</span><br>
+					<i>Monthly Payment</i></p>
+					<ul>
+						<li>5 gb of space</li>
+						<li>50 gb of bandwidth</li>
+						<li>12 websites</li>
+						<li>Advanced Customization</li>
+						<li>wordpress integration</li>
+						<li>email support</li>
+					</ul>
 				</div>
 				<div class="main_body__content_block_5-elem-list-element">
-					f
-				</div>
-				<div class="main_body__content_block_5-elem-list-element">
-					f
+					<h3>Enterprise</h3>
+					<p>$<span>70</span><br>
+					<i>Monthly Payment</i></p>
+					
+					<ul>
+						<li>Unlimited space</li>
+						<li>unlimited bandwidth</li>
+						<li>100 websites</li>
+						<li>Advanced Customization</li>
+						<li>wordpress integration</li>
+						<li>24/7 customer support</li>
+					</ul>
 				</div>
 			</div>
 
 		</div>	
 		</div>
 
+		<div class="main_body__content_block_6-bg">
+		<div class="main_body__content_block_6 wraper">
+			<div class="main_body__content_block_6-header">
+				<h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			
+			<div class="main_body__content_block_6-elem-list">
+				<div class="main_body__content_block_6-elem-list-element">
+					<div class="main_body__content_block_6-elem-list-element_review">
+						<p>Lorem ipsum dolor sit amet, 
+							consectetur adipisicing elit. Doloribus 
+							accusamus expedita repellat similique 
+							odio aspernatur ex, architecto eaque 
+							quo suscipit.</p>
+					</div>			
+					<div class="main_body__content_block_6-elem-list-element_artist-block">
+							<p>Jeremy H.</p><br>
+							<em>Manager</em>
+					</div>
+				</div>
+				
+				<div class="main_body__content_block_6-elem-list-element">
+					<div class="main_body__content_block_6-elem-list-element_review">
+						<p>Lorem ipsum dolor sit amet, 
+							consectetur adipisicing elit. Doloribus 
+							accusamus expedita repellat similique 
+							odio aspernatur ex, architecto eaque 
+							quo suscipit.</p>
+					</div>			
+					<div class="main_body__content_block_6-elem-list-element_artist-block">
+							<p>Jeremy H.</p><br>
+							<em>Manager</em>
+					</div>
+				</div>
+
+				<div class="main_body__content_block_6-elem-list-element">
+					<div class="main_body__content_block_6-elem-list-element_review">
+						<p>Lorem ipsum dolor sit amet, 
+							consectetur adipisicing elit. Doloribus 
+							accusamus expedita repellat similique 
+							odio aspernatur ex, architecto eaque 
+							quo suscipit.</p>
+					</div>			
+					<div class="main_body__content_block_6-elem-list-element_artist-block">
+							<p>Jeremy H.</p><br>
+							<em>Manager</em>
+					</div>
+				</div>
+
+			</div>	
+
+		</div>
+		</div>	
+
+		<div class="main_body__content_block_7-bg">
+		<div class="main_body__content_block_7 wraper">
+			<div class="main_body__content_block_7-header">
+				<h2>STYLISH AXURE DESIGN</h2>
+				<p>Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+			</div>
+			<button class="header_button">Download</button>
+		</div>
+		</div>
+
+		
+		<div class="main_body__content_block_8-bg">
+		<div class="main_body__content_block_8 wraper">
+			<div class="main_body__content_block_8-header">
+				<h2>CONTACT US</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="main_body__content_block_8-form">
+			<form action="">
+				<input type="text" placeholder="Name">
+				<input type="text" placeholder="Email">
+				<input type="text" placeholder="Subject">
+				<input type="text" placeholder="Message">
+				<button>Download</button>
+			</form>
+			</div>
+		</div>
+		</div>
 
 	</main>
 
 
 	<footer>
-		
+		<div class="footer__social_block"></div>	
+		<p>© 2015 Axure Themes</p>
 	</footer>
 </body>
 </html>
