added all elements

--- a/index.html
+++ b/index.html
@@ -315,15 +315,21 @@
 				<h2>CONTACT US</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
-			<div class="main_body__content_block_8-form">
-			<form action="">
-				<input type="text" placeholder="Name">
-				<input type="text" placeholder="Email">
-				<input type="text" placeholder="Subject">
-				<input type="text" placeholder="Message">
-				<button>Download</button>
+			
+			<form action="" class="main_body__content_block_8-form">
+				<div class="main_body__content_block_8-form-input">
+				<div class="main_body__content_block_8-form-input_left_block">
+					<input type="text" placeholder="Name">
+					<input type="text" placeholder="Email">
+					<input type="text" placeholder="Subject">
+				</div>
+				<div class="main_body__content_block_8-form-input_right_block">
+					<textarea rows="8" name="text" placeholder="Message"></textarea>
+				</div>
+				</div>
+				<button>Send Message</button>
 			</form>
-			</div>
+			
 		</div>
 		</div>
 
