--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<header>
 		<div class="main_header">
+			<div class="main_header__navlist-bg">
 			<ul class="main_header__navlist">
 				<li><a href="#">Contact</a></li>
 				<li><a href="#">Reviews</a></li>
@@ -16,6 +17,16 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Features</a></li>
 			</ul>
+			</div>
+			<div class="main_header__navlist-burger">
+				<ul class="main_header__navlist-burger-list">
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Reviews</a></li>
+					<li><a href="#">Pricing</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Features</a></li>
+				</ul>
+			</div>
 			
 			<div class="main_header__top_form">
 				<div class="wraper_top">
