--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
 							euismod bibendum laoreet. Proin gravida dolor sit amet lacus
 							accumsan et viverra justo commodo.</p>
-							<button class="header_button">Download</button>
+							<button class="header_button" onclick="sendTopForm()">Download</button>
 					</div>
 
 					<div class="main_header__top_form-right_column">
@@ -47,7 +47,7 @@
 								<input type="text" placeholder="E-mail" required>
 								<input type="text" placeholder="Password" required>
 							</div>
-							<button class="main_header_form-button">Get Started</button>
+							<button class="main_header_form-button" onclick="sendTopForm()">Get Started</button>
 						</form>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 					penatibus et magnis dis parturient montes.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
 					bibendum laoreet.</p>
-				<button>Download</button>
+				<button onclick="sendTopForm()">Download</button>
 			</div>
 
 			<div class="main_body__content_block_1-img_block">
@@ -327,7 +327,7 @@
 				<h2>STYLISH AXURE DESIGN</h2>
 				<p>Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
 			</div>
-			<button class="header_button">Download</button>
+			<button class="header_button" onclick="sendTopForm()">Download</button>
 		</div>
 		</div>
 
@@ -350,7 +350,7 @@
 					<textarea rows="8" name="text" placeholder="Message"></textarea>
 				</div>
 				</div>
-				<button>Send Message</button>
+				<button onclick="sendTopForm()">Send Message</button>
 			</form>
 			
 		</div>
@@ -363,5 +363,6 @@
 		<div class="footer__social_block"></div>	
 		<p>© 2016 Axure Themes</p>
 	</footer>
+	<script src="js/main.js"></script>
 </body>
 </html>
