--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
 			</div>
 
 			<div class="main_body__top_social_line-icon_block">
-				<img src="img/social_buttons.png" alt="social">
+				<ul>
+					<li>
+						<a href=""><img src="img/fb.png" alt=""></a>
+						<a href=""><img src="img/tw.png" alt=""></a>
+						<a href=""><img src="img/gp.png" alt=""></a>
+						<a href=""><img src="img/pin.png" alt=""></a>
+						<a href=""><img src="img/inst.png" alt=""></a>
+						<a href=""><img src="img/share.png" alt=""></a>
+					</li>
+				</ul>
 			</div>
 
 		</div>
@@ -360,7 +369,6 @@
 
 
 	<footer>
-		<div class="footer__social_block"></div>	
 		<p>© 2016 Axure Themes</p>
 	</footer>
 	<script src="js/main.js"></script>
