--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="main_header__top_form">
 				<div class="wraper_top">
 					<div class="main_header__top_form-left_column">	
-						<img src="img/max-logo.png" width="175px" height="60px">
+						<img src="img/max-logo.png" width="175" height="60">
 						<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
 						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
 							euismod bibendum laoreet. Proin gravida dolor sit amet lacus
@@ -104,7 +104,7 @@
 			</div>
 
 			<div class="main_body__content_block_1-img_block">
-				<img src="img/town_img.png" alt="city" width="320px" height="253px">
+				<img src="img/town_img.png" alt="city" width="320" height="253px">
 			</div>
 
 		</div>
@@ -116,7 +116,7 @@
 		<div class="main_body__content_block_2 wraper">	
 
 			<div class="main_body__content_block_2-img_block">
-				<img src="img/town_img_2.png" alt="city" width="525px" height="375px">
+				<img src="img/town_img_2.png" alt="city" width="525" height="375px">
 			</div>
 
 			<div class="main_body__content_block_2-text_block">
@@ -171,7 +171,7 @@
 			</div>
 
 			<div class="main_body__content_block_3-img_block">
-				<img src="img/town_img_3.png" alt="city" width="525px" height="375px">
+				<img src="img/town_img_3.png" alt="city" width="525" height="375px">
 			</div>
 		</div>
 		</div>
