--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			</div>
 
 			<div class="main_body__content_block_1-img_block">
-				<img src="img/town_img.png" alt="city" width="320" height="253px">
+				<img src="img/town_img.png" alt="city" width="320" height="253">
 			</div>
 
 		</div>
@@ -116,7 +116,7 @@
 		<div class="main_body__content_block_2 wraper">	
 
 			<div class="main_body__content_block_2-img_block">
-				<img src="img/town_img_2.png" alt="city" width="525" height="375px">
+				<img src="img/town_img_2.png" alt="city" width="525" height="375">
 			</div>
 
 			<div class="main_body__content_block_2-text_block">
@@ -171,7 +171,7 @@
 			</div>
 
 			<div class="main_body__content_block_3-img_block">
-				<img src="img/town_img_3.png" alt="city" width="525" height="375px">
+				<img src="img/town_img_3.png" alt="city" width="525" height="375">
 			</div>
 		</div>
 		</div>
