--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 			
-			<form action="" class="main_body__content_block_8-form">
+			<form action="post" class="main_body__content_block_8-form">
 				<div class="main_body__content_block_8-form-input">
 				<div class="main_body__content_block_8-form-input_left_block">
 					<input type="text" placeholder="Name">
