--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="main_header__top_form">
 				<div class="wraper_top">
 					<div class="main_header__top_form-left_column">	
-						<img src="img/max-logo.png" width="175" height="60">
+						<img src="img/max-logo.png" width="175" height="60" alt="">
 						<h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
 						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
 							euismod bibendum laoreet. Proin gravida dolor sit amet lacus
